<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">TMDB Movie</string>

    <string name="web_url">https://www.themoviedb.org/movie/</string>

    <plurals name="duration">
        <item quantity="one">%d dakika</item>
        <item quantity="other">%1$d dakika</item>
    </plurals>

    <string name="network_error">İnternet bağlantınızı kontrol edin...</string>

    <string name="generic_error">Birşeyler yanlış gidiyor. Lütfen daha sonra tekrar deneyin...</string>

    <string name="genres_error" tools:ignore="ExtraTranslation">Türler bulunamadı</string>

    <string name="more_info_button">Daha Fazla Bilgi</string>

    <string name="genres_header">Türler</string>
    <string name="overview_header">Özet</string>
    <string name="duration_header">Süre</string>
    <string name="language_header">Dil</string>
    <string name="date_header">Tarih</string>
    <string name="search_hint">Film Arayın</string>

    <string name="txt_all_movies">Tüm Filmler</string>
    <string name="txt_now_playing">Vizyondaki Filmler</string>
    <string name="txt_popular">Popüler Filmler</string>
    <string name="txt_top_rated">En Beğenilen Filmler</string>
    <string name="txt_upcomming">Yakında Gelecek Filmler</string>

</resources>
