<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical">

    <com.omerilhanli.tmdbmove.asistant.widget.PagerIndicator
        android:id="@+id/pagerIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sliding_tab_strip_background"
        app:pi_slidingBlock="@drawable/image_sliding_block">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TabTextConfig"
                android:text="@string/txt_all_movies" />

            <TextView
                style="@style/TabTextConfig"
                android:text="@string/txt_now_playing" />

            <TextView
                style="@style/TabTextConfig"
                android:text="@string/txt_popular" />

            <TextView
                style="@style/TabTextConfig"
                android:text="@string/txt_top_rated" />

            <TextView
                style="@style/TabTextConfig"
                android:text="@string/txt_upcomming" />
        </LinearLayout>
    </com.omerilhanli.tmdbmove.asistant.widget.PagerIndicator>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>